avoid stretching of images in css grid context

--- a/src/css/01_tools/_layout.scss
+++ b/src/css/01_tools/_layout.scss
@@ -12,13 +12,6 @@
                     [content-end] 1fr 1fr
                 [wide-content-end] var(--layout-margin)
             [full-bleed-end];
-
-    img {
-        max-height: 100%;
-        height: 100%;
-        max-width: none;
-        width: 100%;
-    }
 }
 
 @mixin layout__full-bleed {
