--- a/src/css/05_components/_hero.scss
+++ b/src/css/05_components/_hero.scss
@@ -13,10 +13,10 @@
 }
 
 .hero__image {
-    object-fit: cover;
-
+    height: 100%;
     grid-column: 1/-1;
     grid-row: 1/-1;
+    object-fit: cover;
 }
 
 .hero__content {
